[tool.poetry]
name = "presidio-redcap"
version = "0.1.0"
description = "Interface for Behavioral and Biometric Database for Presidio"
authors = ["Ankit Khambhati <akhambhati@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
