[tool.poetry]
name = "presidio-redcap"
version = "0.2.0"
description = "Interface for Behavioral and Biometric Database for Presidio"
documentation = "https://presidio-redcap.readthedocs.io"
authors = ["Ankit Khambhati <akhambhati@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pycap = {extras = ["pandas"], version = "^2.1.0"}
pandas = "^1.4.2"
dacite = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
coverage = {version = "^6.3.2", extras = ["toml"]}
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
black = "^22.3.0"
flake8 = "^4.0.1"
flake8-bandit = "^3.0.0"
flake8-black = "^0.3.2"
flake8-bugbear = "^22.3.23"
flake8-import-order = "^0.18.1"
safety = "^1.10.3"
mypy = "^0.942"
typeguard = "^2.13.3"
flake8-annotations = "^2.8.0"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
xdoctest = "^1.0.0"
Pygments = "^2.11.2"
Sphinx = "^4.5.0"
sphinx-autodoc-typehints = "^1.18.1"
codecov = "^2.1.12"
commitizen = "^2.24.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["presidio_redcap"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.0"
tag_format = "$version"
version_files = [
    "src/presidio_redcap/__init__.py",
    "pyproject.toml:version"
]
bump_message = "bump: $current_version → $new_version [skip-ci]"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
